# video2slideshow

./: README.md  create_slideshow.sh  create_test_mkv.py  debug_output.mkv  dummy.vtt  requirements.txt  sample.vtt  test.mkv  test_output.mkv  test_output_eng.mkv  test_output_fixed.mkv  test_output_gop24.mkv  test_output_multi.mkv  test_output_optimized.mkv  test_output_preview.mkv  test_output_reencode.mkv  test_output_separate_subs.mkv  test_output_track1.mkv  test_output_track1_aac_srt.mkv  test_output_track1_copy.mkv  test_output_track1_reencoded.mkv  test_slideshow.mkv  test_slideshow_preview.mkv  video_slideshow_generator.py
bash/: create_slideshow.sh
docker/nvidia/: Dockerfile  README.md
python/: DEV_NOTES.md  README.md  requirements.txt  video_slideshow_generator.py
video2slideshow/include/: video2slideshow.h
vlc/: AGENTS.md  CONTRIBUTING.md  README.md  meson.build
vlc/src/: meson.build  video2slideshow.cpp
